modified:   config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -268,7 +268,7 @@ rules:
 - DOMAIN-SUFFIX,ml.youngjoygame.com,DIRECT-INDI
 - SRC-IP-CIDR,172.16.21.251/32,SERVER-SG
 - SRC-IP-CIDR,172.16.21.11/32,DIRECT-INDI
-- SRC-IP-CIDR,172.16.21.12/32,DIRECT-INDI
+- SRC-IP-CIDR,172.16.21.12/32,SERVER-SG
 - IP-CIDR,198.18.0.1/16,REJECT,no-resolve
 - IP-CIDR,103.253.27.84/32,DIRECT-INDI
 - IP-CIDR,38.9.141.66/32,DIRECT-INDI
