--- a/rule-provider/tiktok.yaml
+++ b/rule-provider/tiktok.yaml
@@ -9,3 +9,35 @@ payload:
   - DOMAIN-SUFFIX,tiktokcdn.com
   - DOMAIN-SUFFIX,tiktokv.com
   - DOMAIN,p16-tiktokcdn-com.akamaized.net
+  # TikTok
+  # Src: https://www.netify.ai/resources/applications/tiktok
+  - DOMAIN-KEYWORD,-tiktok.byteoversea.com
+  - DOMAIN-SUFFIX,byteoversea.net
+  - DOMAIN-SUFFIX,ibytedtos.com
+  - DOMAIN-KEYWORD,tiktokcdn.com
+  - DOMAIN-KEYWORD,tiktokv.com
+  - DOMAIN-KEYWORD,-tiktokcdn-com
+  - DOMAIN-KEYWORD,-tiktok.
+  - DOMAIN-KEYWORD,-tiktok-
+  - DOMAIN-KEYWORD,tiktok-
+  - DOMAIN-KEYWORD,tiktokcdn-
+  - DOMAIN-KEYWORD,tiktokcdn
+  - DOMAIN-KEYWORD,-tt.byteimg.com
+  - DOMAIN-KEYWORD,-tt-ipv6.byteimg.com
+  - DOMAIN-KEYWORD,-hs.pstatp.com
+  - DOMAIN-KEYWORD,-tos.pstatp.com
+  - DOMAIN-KEYWORD,-mus.pstatp.com
+  - DOMAIN-SUFFIX,flive.pstatp.com
+  - DOMAIN-SUFFIX,byteimg.com
+  - DOMAIN-SUFFIX,ibyteimg.com
+  - DOMAIN-SUFFIX,ipstatp.com
+  - DOMAIN-SUFFIX,sgpstatp.com
+  - DOMAIN-SUFFIX,snssdk.com
+  - DOMAIN-KEYWORD,tlivecdn.com
+  - DOMAIN-KEYWORD,ttlivecdn.com
+  - DOMAIN-SUFFIX,ttoversea.net
+  - DOMAIN-SUFFIX,ttoverseaus.net
+  - DOMAIN-SUFFIX,sgsnssdk.com
+  - DOMAIN-SUFFIX,isnssdk.com
+  - DOMAIN-SUFFIX,musemuse.cn
+  #- PROCESS-NAME,com.zhiliaoapp.musically
