--- a/config.yaml
+++ b/config.yaml
@@ -111,9 +111,9 @@ bind-address: "*"
 mode: rule
 log-level: silent
 ipv6: false
-external-controller: 0.0.0.0:9090
+external-controller: 192.168.10.1:9090
 external-ui: "/usr/share/openclash/ui"
-secret: androbuddies
+secret: '123456'
 profile:
   store-selected: true
   store-fake-ip: false
