--- a/config.yaml
+++ b/config.yaml
@@ -86,9 +86,9 @@ bind-address: "*"
 mode: rule
 log-level: silent
 ipv6: false
-external-controller: 192.168.10.1:9090
+external-controller: 0.0.0.0:9090
 external-ui: "/usr/share/openclash/ui"
-secret: '123456'
+secret: 123456
 profile:
   store-selected: true
   store-fake-ip: false
@@ -312,9 +312,9 @@ rules:
   - GEOSITE,telegram,PG-telegram
   - GEOIP,telegram,PG-telegram
   - GEOSITE,tiktok,PG-tiktok
-  - GEOIP,id,DIRECT-INDI
   - RULE-SET,RP-indo,DIRECT-INDI
   - GEOIP,cloudflare,DIRECT-INDI
   - GEOSITE,microsoft,SERVER-SG
   - RULE-SET,RP-portgame,DIRECT-INDI
+  - GEOIP,id,DIRECT-INDI
   - MATCH,GLOBAL
