modified:   config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -317,4 +317,5 @@ rules:
 - GEOSITE,microsoft,SERVER-SG
 - GEOIP,id,DIRECT-INDI
 - RULE-SET,RP-portgame,DIRECT-INDI
+- DST-PORT,8080,SERVER-SG
 - MATCH,GLOBAL
