--- a/config-global.yaml
+++ b/config-global.yaml
@@ -11,6 +11,11 @@ proxy-groups:
   type: select
   use:
   - SERV-SG
+- name: DIRECT-INDI
+  type: select
+  interface-name: eth1
+  proxies:
+  - DIRECT
 port: 7890
 socks-port: 7891
 mixed-port: 7893
