--- a/config.yaml
+++ b/config.yaml
@@ -247,6 +247,9 @@ rules:
 - IP-CIDR,198.18.0.1/16,REJECT,no-resolve
 - IP-CIDR,103.253.27.84/32,DIRECT-INDI
 - IP-CIDR,38.9.141.66/32,DIRECT-INDI
+- SRC-IP-CIDR,172.16.201.9/32,FAILOVER
+- SRC-IP-CIDR,172.16.201.11/32,DIRECT-INDI
+- SRC-IP-CIDR,172.16.201.12/32,FAILOVER
 - DOMAIN-SUFFIX,arwnetwork.one,DIRECT-INDI
 - GEOIP,private,DIRECT-INDI,no-resolve
 - RULE-SET,RP-whatsapp,DIRECT-INDI
@@ -262,10 +265,10 @@ rules:
 - GEOSITE,telegram,FAILOVER
 - GEOIP,telegram,FAILOVER
 - GEOSITE,tiktok,FAILOVER
-- RULE-SET,RP-indo,DIRECT-INDI
 - GEOIP,cloudflare,DIRECT-INDI
 - GEOSITE,microsoft,FAILOVER
-- GEOIP,id,DIRECT-INDI
 - RULE-SET,RP-portgame,DIRECT-INDI
 - DST-PORT,8080,FAILOVER
+- RULE-SET,RP-indo,DIRECT-INDI
+- GEOIP,id,DIRECT-INDI
 - MATCH,GLOBAL
