--- a/rule-provider/telegram.yaml
+++ b/rule-provider/telegram.yaml
@@ -16,3 +16,4 @@ payload:
   - DOMAIN-SUFFIX,tg.dev
   - DOMAIN-SUFFIX,tx.me
   - DOMAIN-SUFFIX,usercontent.dev
+  - DOMAIN-SUFFIX,video-delivery.net
