--- a/config.yaml
+++ b/config.yaml
@@ -277,7 +277,7 @@ rules:
 - GEOSITE,telegram,FAILOVER
 - GEOIP,telegram,FAILOVER
 - GEOSITE,tiktok,FAILOVER
-- GEOIP,cloudflare,DIRECT-INDI
+- GEOIP,cloudflare,FAILOVER
 - GEOSITE,microsoft,FAILOVER
 - RULE-SET,RP-portgame,DIRECT-INDI
 - DST-PORT,8080,FAILOVER
