--- a/config.yaml
+++ b/config.yaml
@@ -5,8 +5,8 @@ proxy-providers:
     path: "./proxy_provider/akun-SG.yaml"
     health-check:
       enable: true
-      url: https://arwnetwork.one/
-      interval: 300
+      url: http://www.gstatic.com/generate_204
+      interval: 60
 proxy-groups:
 - name: SERVER-SG
   type: select
@@ -17,15 +17,15 @@ proxy-groups:
   interface-name: eth1
   proxies:
   - DIRECT
-  url: https://arwnetwork.one/
-  interval: '300'
+  url: http://www.gstatic.com/generate_204
+  interval: '60'
 - name: FAILOVER
   type: fallback
   proxies:
   - SERVER-SG
   - DIRECT-INDI
-  url: https://arwnetwork.one/
-  interval: '380'
+  url: http://www.gstatic.com/generate_204
+  interval: '60'
 port: 7890
 socks-port: 7891
 mixed-port: 7893
