--- a/config.yaml
+++ b/config.yaml
@@ -253,13 +253,17 @@ rule-providers:
 rules:
 - DST-PORT,7895,REJECT
 - DST-PORT,7892,REJECT
+# ml update
 - DOMAIN-SUFFIX,ml.youngjoygame.com,DIRECT-INDI
 - IP-CIDR,198.18.0.1/16,REJECT,no-resolve
 - IP-CIDR,103.253.27.84/32,DIRECT-INDI
 - IP-CIDR,38.9.141.66/32,DIRECT-INDI
+# lancache
 - SRC-IP-CIDR,172.16.201.9/32,FAILOVER
-- SRC-IP-CIDR,172.16.201.11/32,DIRECT-INDI
-- SRC-IP-CIDR,172.16.201.12/32,FAILOVER
+#dns server
+- SRC-IP-CIDR,172.16.100.251/32,DIRECT-INDI
+#dns server
+- SRC-IP-CIDR,172.16.100.252/32,FAILOVER
 - DOMAIN-SUFFIX,arwnetwork.one,DIRECT-INDI
 - GEOIP,private,DIRECT-INDI,no-resolve
 - RULE-SET,RP-whatsapp,DIRECT-INDI
