--- a/config.yaml
+++ b/config.yaml
@@ -272,7 +272,7 @@ rule-providers:
 rules:
 - DST-PORT,7895,REJECT
 - DST-PORT,7892,REJECT
-- DOMAIN-SUFFIX,ml.youngjoygame.com,DIRECT-CON
+- AND, ((NETWORK,tcp),(DST-PORT,80),(DOMAIN-SUFFIX,ml.youngjoygame.com)),TUNNEL
 - IP-CIDR,198.18.0.1/16,REJECT,no-resolve
 - IP-CIDR,103.253.27.84/32,DIRECT-CON
 - IP-CIDR,38.9.141.66/32,DIRECT-CON
@@ -301,7 +301,6 @@ rules:
 - GEOSITE,cloudflare,TUNNEL
 - GEOSITE,microsoft,TUNNEL
 - RULE-SET,RP-portgame,DIRECT-CON
-- DST-PORT,8080,TUNNEL
 - RULE-SET,RP-indo,DIRECT-CON
 - GEOIP,sg,TUNNEL
 - GEOSITE,akamai,TUNNEL
